--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -182,6 +182,10 @@ h1, .h1, h2, .h2, h3, .h3 {
     box-shadow: #a47d5e 0 80px 0px 2px inset;
 }
 
+.button2:active, .button2:visited {
+    color:#fafafa;
+}
+
 .button3 {
     color: #a47d5e;
     box-shadow: #a47d5e 0 0px 0px 2px inset;
